--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,12 +28,12 @@ jobs:
           $app_name | Out-File -FilePath appname.txt
           $dnsname = "$app_name.${{ vars.DOMAIN }}"
           $dnsname | Out-File -FilePath dnsname.txt
-          $namespace = ${{vars.namespace}}
+          $namespace = "${{vars.namespace}}"
           $tenant_id = "${{ vars.ADMIN_APP_TENANTID }}"
           $client_id = "${{ vars.ADMIN_APP_APPID }}"
           $dollarsign = '$'
           
-
+          if ($namespace -eq "") $namespace = "jaeger"
 
 
           @"
