--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -162,6 +162,7 @@ jobs:
           kind: Ingress
           metadata:
             name: $namespace
+            namespace: $namespace            
           spec:
             rules:
               - host: $dnsname
